# Codex-ia-

./: CMakeLists.txt  README.md
docs/: architecture.md  wiring.md
